2025-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-connection-local-default-system-variables):
	Add "" to `exec-suffixes'.  (Bug#78886)

2025-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-local-environment): New defmacro.
	(tramp-start-process): New defun.
	(tramp-call-process, tramp-call-process-region)
	(tramp-process-lines): Use `with-tramp-local-environment'.

	* tramp-adb.el (tramp-adb-maybe-open-connection):
	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	* tramp-gvfs.el (tramp-gvfs-handle-file-notify-add-watch):
	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection):
	* tramp-smb.el (tramp-smb-handle-copy-directory)
	(tramp-smb-handle-file-acl)
	(tramp-smb-handle-file-notify-add-watch)
	(tramp-smb-handle-set-file-acl, tramp-smb-maybe-open-connection):
	* tramp-sudoedit.el (tramp-sudoedit-send-command):
	Use `tramp-start-process'.  Do not call	`tramp-post-process-creation'.

2025-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-integration.el (tramp-connection-local-default-system-variables):
	Add also `exec-suffixes'.

	* tramp-smb.el (tramp-smb-maybe-open-connection): Use default
	values of `path-separator', `null-device' and `exec-suffixes'.
	(tramp-smb-connection-local-default-system-variables):
	New defconst.  Add it to connection-local profiles.

2025-07-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-barf-if-file-missing)
	(with-parsed-tramp-file-name, tramp-skeleton-file-truename):
	* tramp-archive.el (with-parsed-tramp-archive-file-name):
	* tramp-message.el (tramp-with-demoted-errors): Fix debug declatation.

	* tramp-sh.el (tramp-sh-gio-monitor-process-filter): Do not
	prepend remote prefix.

2025-07-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-get-file-name-with-method): New defun.
	(with-tramp-file-name-with-method, tramp-file-name-with-sudo): Use it.